# moqt-minimal

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
docs/: acceptance-criteria.md  design-decisions.md  design-moqt-core.md  design-moqt-relay.md  design-overview.md  feedback-reviewed.md  minimal-moqt-spec.md  plan.md
docs/design/: decisions.md  moqt-core.md  moqt-relay.md  overview.md
moqt-core/: Cargo.toml
moqt-core/src/: client.rs  lib.rs  quic_config.rs
moqt-core/src/data/: mod.rs  object.rs  subgroup_header.rs
moqt-core/src/message/: mod.rs  parameter.rs  publish_done.rs  publish_namespace.rs  request_error.rs  request_ok.rs  setup.rs  subscribe.rs  subscribe_ok.rs
moqt-core/src/primitives/: mod.rs  reason_phrase.rs  track_namespace.rs  varint.rs
moqt-core/src/session/: control_stream.rs  data_stream.rs  group.rs  mod.rs  moqt_session.rs  publish_namespace_request.rs  quic_config.rs  request_id.rs  request_stream.rs  stream_utils.rs  subgroup.rs  subscribe_request.rs  subscription.rs
moqt-core/src/stream/: control.rs  data.rs  mod.rs  request.rs  utils.rs
moqt-core/src/transport/: mod.rs  quic.rs
moqt-core/src/wire/: key_value_pair.rs  mod.rs  object.rs  (+12 more)
moqt-pub/: Cargo.toml
moqt-pub/src/: main.rs
moqt-relay/: Cargo.toml
moqt-relay/src/: lib.rs  main.rs  relay.rs
moqt-relay/tests/: integration.rs
moqt-sub/: Cargo.toml
moqt-sub/src/: main.rs
scripts/: dev.sh  e2e-video-test.sh
web/: index.html  package-lock.json  package.json  publisher.html  subscriber.html  tsconfig.json
web/src/: publisher.ts  session.ts  subscriber.ts
(+17 files in other folders)
