[workspace]
members = [
    "moqt-core",
    "moqt-relay",
    "moqt-pub",
    "moqt-sub",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
url = "2"
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
