[package]
name = "moqt-relay"
version = "0.1.0"
edition.workspace = true

[dependencies]
moqt-core = { path = "../moqt-core" }
anyhow.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
rustls-pemfile = "2"
tokio.workspace = true
url.workspace = true
web-transport-quinn.workspace = true
